Added a socket address to config

--- a/stages/monitoring/files/configs/config.ini
+++ b/stages/monitoring/files/configs/config.ini
@@ -2,3 +2,4 @@
 configs = /etc/monitoring/configs
 plugins = /etc/monitoring/plugins
 notifiers = /etc/monitoring/notifiers
+socket = /var/run/wtfmeter.sock
