Added host and port for http listener

--- a/stages/monitoring/files/configs/config.ini
+++ b/stages/monitoring/files/configs/config.ini
@@ -2,4 +2,5 @@
 configs = /etc/monitoring/configs
 plugins = /etc/monitoring/plugins
 notifiers = /etc/monitoring/notifiers
-socket = /var/run/wtfmeter.sock
+address = 127.0.0.1
+port = 8881
