Making sure wtf service can now save state file

--- a/stages/monitoring/files/configs/config.ini
+++ b/stages/monitoring/files/configs/config.ini
@@ -4,3 +4,4 @@ plugins = /etc/monitoring/plugins
 notifiers = /etc/monitoring/notifiers
 address = 127.0.0.1
 port = 8881
+stateFile=/tmp/dafuq.state
