Added dnsmasq configs

--- a/stages/services/files/etc/dnsmasq.d/distracting-websites.conf
+++ b/stages/services/files/etc/dnsmasq.d/distracting-websites.conf
@@ -5,6 +5,7 @@ address=/youtube.com/127.0.0.1
 address=/instagram.com/127.0.0.1
 address=/twitter.com/127.0.0.1
 address=/wikipedia.org/127.0.0.1
+address=/facebook.com/127.0.0.1
 address=/reddit.com/127.0.0.1
 address=/theverge.com/127.0.0.1
 address=/vimeo.com/127.0.0.1
