Forgot a goddamn backslash

--- a/stages/services/files/etc/systemd/system/gollum-wiki.service
+++ b/stages/services/files/etc/systemd/system/gollum-wiki.service
@@ -7,7 +7,7 @@ ExecStartPre=-/usr/bin/podman rm -f gollum-wiki
 ExecStart=/usr/bin/podman run \
   --name=gollum-wiki \
   -p 26008:4567 \
-  -v /var/storage/wastebox/tiredsysadmin.cc/wiki/repo:/wiki
+  -v /var/storage/wastebox/tiredsysadmin.cc/wiki/repo:/wiki \
   --restart unless-stopped \
   gollumwiki/gollum:latest
 ExecStop=/usr/bin/podman stop -t 2 gollum-wiki
