--- a/stages/services/files/etc/systemd/system/nat-flush.service
+++ b/stages/services/files/etc/systemd/system/nat-flush.service
@@ -1,10 +1,9 @@
 [Unit]
 Description=Flush NAT at system start to help Podman's CNI
-Before=podman.service
 
 [Service]
 Type=oneshot
 ExecStart=/sbin/iptables -t nat --flush
 
 [Install]
-WantedBy=network-online.target
+WantedBy=multi-user.target
