Updated motion config

--- a/stages/services/files/etc/motion/motion.conf
+++ b/stages/services/files/etc/motion/motion.conf
@@ -4,7 +4,7 @@ setup_mode off
 logfile /var/log/motion/motion.log
 log_level 6
 log_type all
-videodevice /dev/video1
+videodevice /dev/v4l/by-id/usb-046d_0825_45BEE2F0-video-index0
 v4l2_palette 17
 input -1
 norm 0
@@ -27,7 +27,7 @@ hue 0
 roundrobin_frames 1
 roundrobin_skip 1
 switchfilter off
-threshold 1500
+threshold 500
 threshold_tune off
 noise_level 32
 noise_tune on
