Changed working directory to avoid issues

--- a/stages/services/files/etc/systemd/system/hledger-web.service
+++ b/stages/services/files/etc/systemd/system/hledger-web.service
@@ -8,6 +8,7 @@ ExecStart=/usr/bin/hledger-web \
             --base-url=https://bank.rcmd.space \
             --file=/home/ledger/ledger.book
 User=ledger
+WorkingDirectory=/home/ledger
 
 [Install]
 WantedBy=multi-user.target
