Switched back to TCP port RPC binding

--- a/stages/services/files/etc/laminar.conf
+++ b/stages/services/files/etc/laminar.conf
@@ -1,5 +1,5 @@
 LAMINAR_HOME=/var/lib/laminar
 LAMINAR_BIND_HTTP=127.0.0.1:28000
-LAMINAR_BIND_RPC=unix:/var/run/laminar/laminar.sock
+LAMINAR_BIND_RPC=0.0.0.0:28001
 LAMINAR_TITLE="RCMD Funkhaus"
 CLICOLOR_FORCE=1
