Enabled Drone CI on printserver

--- a/.drone.yml
+++ b/.drone.yml
@@ -43,3 +43,26 @@ steps:
 
 node:
   machine: fermium
+
+---
+kind: pipeline
+type: exec
+name: printserver
+
+platform:
+  os: linux
+  arch: arm
+
+clone:
+  disable: true
+
+steps:
+- name: clone
+  commands:
+  - git clone $DRONE_GIT_SSH_URL
+- name: build
+  commands:
+  - cd $DRONE_REPO_NAME && sudo make printserver
+
+node:
+  machine: orangepizero
