Ignore failure to let pipeline continue

--- a/.drone.yml
+++ b/.drone.yml
@@ -41,6 +41,7 @@ steps:
   commands:
   - git clone $DRONE_GIT_SSH_URL
 - name: build
+  failure: ignore
   commands:
   - cd $DRONE_REPO_NAME && sudo make seedbox
 - name: failure
