--- a/.drone.yml
+++ b/.drone.yml
@@ -17,9 +17,6 @@ steps:
 - name: build
   commands:
   - cd $DRONE_REPO_NAME && sudo make
-- name: report
-  commands:
-  - /usr/local/bin/telegram.run
 
 node:
   machine: hangar.rcmd.space
@@ -41,16 +38,11 @@ steps:
   commands:
   - git clone $DRONE_GIT_SSH_URL
 - name: build
-  failure: ignore
   commands:
   - cd $DRONE_REPO_NAME && sudo make seedbox
 - name: failure
-  failure: ignore
   commands:
   - /bin/fail
-- name: report
-  commands:
-  - /usr/local/bin/telegram.run
 
 node:
   machine: kind-box
@@ -74,9 +66,6 @@ steps:
 - name: build
   commands:
   - cd $DRONE_REPO_NAME && sudo make fermium
-- name: report
-  commands:
-  - /usr/local/bin/telegram.run
 
 node:
   machine: fermium
@@ -100,9 +89,31 @@ steps:
 - name: build
   commands:
   - cd $DRONE_REPO_NAME && sudo make printserver
+
+node:
+  machine: orangepizero
+
+---
+kind: pipeline
+type: exec
+name: report
+
+platform:
+  os: linux
+  arch: amd64
+
+clone:
+  disable: true
+
+steps:
 - name: report
   commands:
   - /usr/local/bin/telegram.run
 
+trigger:
+  status:
+  - success
+  - failure
+
 node:
-  machine: orangepizero
+  machine: hangar.rcmd.space
