--- a/.drone.yml
+++ b/.drone.yml
@@ -21,28 +21,28 @@ steps:
 node:
   machine: hangar.rcmd.space
 
----
-kind: pipeline
-type: exec
-name: sandbox
-
-platform:
-  os: linux
-  arch: amd64
-
-clone:
-  disable: true
-
-steps:
-- name: clone
-  commands:
-  - git clone $DRONE_GIT_SSH_URL
-- name: build
-  commands:
-  - cd $DRONE_REPO_NAME && sudo make seedbox
-
-node:
-  machine: kind-box
+    # ---
+    # kind: pipeline
+    # type: exec
+    # name: sandbox
+    # 
+    # platform:
+    #   os: linux
+    #   arch: amd64
+    # 
+    # clone:
+    #   disable: true
+    # 
+    # steps:
+    # - name: clone
+    #   commands:
+    #   - git clone $DRONE_GIT_SSH_URL
+    # - name: build
+    #   commands:
+    #   - cd $DRONE_REPO_NAME && sudo make seedbox
+    # 
+    # node:
+    #   machine: kind-box
 
 ---
 kind: pipeline
@@ -118,5 +118,5 @@ node:
 depends_on:
 - hangar
 - fermium
-- sandbox
+# - sandbox
 - printserver
