Passing hostname to running unit

--- a/stages/monitoring/files/configs/wtfd.service
+++ b/stages/monitoring/files/configs/wtfd.service
@@ -3,6 +3,7 @@ Description=WTF just happened?
 
 [Service]
 Environment="CONFIG_PATH=/etc/monitoring/config.ini"
+Environment="HOSTNAME=%H"
 ExecStart=/opt/apps/dafuq/dafuq-linux_amd64
 
 [Install]
