--- a/.drone.yml
+++ b/.drone.yml
@@ -16,7 +16,7 @@ steps:
   - git clone $DRONE_GIT_SSH_URL
 - name: build
   commands:
-  - cd $DRONE_REPO_NAME && sudo make production
+  - cd $DRONE_REPO_NAME && echo $GIT_SUDO | sudo -S make production
 
 node:
   machine: hangar.rcmd.space
