--- a/.drone.yml
+++ b/.drone.yml
@@ -62,7 +62,7 @@ steps:
   - git clone --depth 1 $DRONE_GIT_SSH_URL
 - name: build
   commands:
-  - cd $DRONE_REPO_NAME && sudo make fermium
+  - cd $DRONE_REPO_NAME && echo $GIT_SUDO | sudo -S make fermium
 
 node:
   machine: fermium
@@ -85,7 +85,7 @@ steps:
   - git clone --depth 1 $DRONE_GIT_SSH_URL
 - name: build
   commands:
-  - cd $DRONE_REPO_NAME && sudo make printserver
+  - cd $DRONE_REPO_NAME && echo $GIT_SUDO | sudo -S make printserver
 
 node:
   machine: orangepizero
