Updated monitoring timings

--- a/stages/monitoring/files/configs/config.ini
+++ b/stages/monitoring/files/configs/config.ini
@@ -4,4 +4,5 @@ plugins = /etc/monitoring/plugins
 notifiers = /etc/monitoring/notifiers
 address = 0.0.0.0
 port = 8881
-stateFile=/tmp/dafuq.state
+stateFile = /tmp/dafuq.state
+execTimeoutSec = 30
