--- a/.drone.yml
+++ b/.drone.yml
@@ -24,28 +24,31 @@ steps:
 node:
   machine: hangar.rcmd.space
 
-    # ---
-    # kind: pipeline
-    # type: exec
-    # name: sandbox
-    # 
-    # platform:
-    #   os: linux
-    #   arch: amd64
-    # 
-    # clone:
-    #   disable: true
-    # 
-    # steps:
-    # - name: clone
-    #   commands:
-    #   - git clone $DRONE_GIT_SSH_URL
-    # - name: build
-    #   commands:
-    #   - cd $DRONE_REPO_NAME && sudo make seedbox
-    # 
-    # node:
-    #   machine: kind-box
+---
+kind: pipeline
+type: exec
+name: outpost
+
+platform:
+  os: linux
+  arch: amd64
+
+clone:
+  disable: true
+
+steps:
+- name: clone
+  commands:
+  - git clone $DRONE_GIT_SSH_URL
+- name: build
+  commands:
+  - cd $DRONE_REPO_NAME && echo $GIT_SUDO | sudo -S make builder
+  environment:
+    GIT_SUDO:
+      from_secret: git_sudo
+
+node:
+  machine: outpost
 
 ---
 kind: pipeline
@@ -127,5 +130,5 @@ node:
 depends_on:
 - hangar
 - fermium
-# - sandbox
+- outpost
 - printserver
