--- a/.drone.yml
+++ b/.drone.yml
@@ -39,7 +39,7 @@ clone:
 steps:
 - name: clone
   commands:
-  - git clone $DRONE_GIT_SSH_URL
+  - git clone https://github.com/reactorcoremeltdown/dustbag.git
 - name: build
   commands:
   - cd $DRONE_REPO_NAME && echo $GIT_SUDO | sudo -S make builder
