--- a/.drone.yml
+++ b/.drone.yml
@@ -42,7 +42,7 @@ steps:
   - git clone https://github.com/reactorcoremeltdown/dustbag.git
 - name: build
   commands:
-  - cd $DRONE_REPO_NAME && echo $GIT_SUDO | sudo -S make builder
+  - cd $DRONE_REPO_NAME && echo $GIT_SUDO | sudo -S make outpost
   environment:
     GIT_SUDO:
       from_secret: git_sudo
