Wait for 5 seconds before cloning

--- a/.drone.yml
+++ b/.drone.yml
@@ -44,6 +44,7 @@ clone:
 steps:
 - name: clone
   commands:
+  - sleep 5
   - git clone https://github.com/reactorcoremeltdown/dustbag.git
 - name: build
   commands:
