--- a/.drone.yml
+++ b/.drone.yml
@@ -144,10 +144,10 @@ trigger:
   - failure
 
 node:
-  machine: garage
+  role: production
 
 depends_on:
-- hangar
+- production
 - fermium
 - outpost
 - printserver
