Updated motion config

--- a/stages/services/includes/media/files/etc/motion/motion.conf
+++ b/stages/services/includes/media/files/etc/motion/motion.conf
@@ -31,7 +31,7 @@ log_level 6
 target_dir /var/lib/motion
 
 # Video device (e.g. /dev/video0) to be used for capturing.
-videodevice /dev/v4l/by-id/usb-046d_0825_45BEE2F0-video-index0
+video_device /dev/video0
 
 # Parameters to control video device.  See motion_guide.html
 ; vid_control_params value
@@ -59,7 +59,7 @@ height 720
 framerate 10
 
 # Text to be overlayed in the lower left corner of images
-text_left CAMERA1
+text_left DVOR
 
 # Text to be overlayed in the lower right corner of images.
 text_right %Y-%m-%d\n%T-%q
