--- a/stages/monitoring/files/configs/config.ini
+++ b/stages/monitoring/files/configs/config.ini
@@ -5,4 +5,5 @@ notifiers = /etc/monitoring/notifiers
 address = 0.0.0.0
 port = 8881
 stateFile = /tmp/dafuq.state
+debug = true
 execTimeoutSec = 30
