--- a/stages/monitoring/variables/checks.yaml
+++ b/stages/monitoring/variables/checks.yaml
@@ -305,7 +305,7 @@ production:
     warningThreshold: "99"
     criticalThreshold: "97"
     flowOperator: downwards
-    argument: http://10.88.0.1:26105/healthcheck
+    argument: https://rbw.rcmd.space/healthcheck
     interval: 1m
     description: RCMD Internal API, RBW proxy
     notify:
