Adjusted install conditional per machine type

--- a/stages/repos/variables/repos.yaml
+++ b/stages/repos/variables/repos.yaml
@@ -2,28 +2,33 @@ debian:
   repositories:
     - name: "syncthing"
       state: "present"
+      install_on: "production fermium"
       key: "https://syncthing.net/release-key.gpg"
       url: "https://apt.syncthing.net/"
       distro: "syncthing"
       section: "stable"
     - name: "helm"
       state: "present"
+      install_on: "production fermium"
       key: "https://packages.buildkite.com/helm-linux/helm-debian/gpgkey"
       url: "https://packages.buildkite.com/helm-linux/helm-debian/any/"
       distro: "any"
       section: "main"
     - name: "trivy"
       state: "present"
+      install_on: "production"
       key: "https://aquasecurity.github.io/trivy-repo/deb/public.key"
       url: "https://aquasecurity.github.io/trivy-repo/deb"
       section: "main"
     - name: "tiredsysadmin-test"
       state: "present"
+      install_on: "outpost"
       key: "https://deb-test.tiredsysadmin.cc/dists/bookworm/tiredsysadmin-repo.gpg"
       url: "https://deb-test.tiredsysadmin.cc/"
       section: "main"
     - name: "tiredsysadmin"
       state: "present"
+      install_on: "production fermium printserver outpost"
       key: "https://deb.tiredsysadmin.cc/dists/bookworm/tiredsysadmin-repo.gpg"
       url: "https://deb.tiredsysadmin.cc/"
       section: "main"
