--- a/stages/repos/variables/repos.yaml
+++ b/stages/repos/variables/repos.yaml
@@ -42,6 +42,8 @@ debian:
         description: "Distributing system tools made by Tiredsysadmin.cc"
         signwith: "B5D8A77D41E1BD97BA81F35E9E1A77C31D844928"
         distributions:
+          - name: "trixie"
+            architectures: "amd64 arm64 armhf"
           - name: "bookworm"
             architectures: "amd64 arm64 armhf"
           - name: "bullseye"
@@ -60,5 +62,7 @@ debian:
         description: "Distributing system tools made by Tiredsysadmin.cc, testing repo"
         signwith: "B5D8A77D41E1BD97BA81F35E9E1A77C31D844928"
         distributions:
+          - name: "trixie"
+            architectures: "amd64 arm64 armhf"
           - name: "bookworm"
             architectures: "amd64 arm64 armhf"
