Added syncthing v2 repo

--- a/stages/repos/variables/repos.yaml
+++ b/stages/repos/variables/repos.yaml
@@ -7,6 +7,13 @@ debian:
       url: "https://apt.syncthing.net/"
       distro: "syncthing"
       section: "stable"
+    - name: "syncthing-v2"
+      state: "present"
+      install_on: "production fermium"
+      key: "https://syncthing.net/release-key.gpg"
+      url: "https://apt.syncthing.net/"
+      distro: "syncthing-v2"
+      section: "stable"
     - name: "helm"
       state: "present"
       install_on: "production fermium"
