Specified section instead of a distro

--- a/stages/repos/variables/repos.yaml
+++ b/stages/repos/variables/repos.yaml
@@ -12,8 +12,8 @@ debian:
       install_on: "production fermium"
       key: "https://syncthing.net/release-key.gpg"
       url: "https://apt.syncthing.net/"
-      distro: "syncthing-v2"
-      section: "stable"
+      distro: "syncthing"
+      section: "stable-v2"
     - name: "helm"
       state: "present"
       install_on: "production fermium"
