Specified two sections in one repo

--- a/stages/repos/variables/repos.yaml
+++ b/stages/repos/variables/repos.yaml
@@ -6,14 +6,7 @@ debian:
       key: "https://syncthing.net/release-key.gpg"
       url: "https://apt.syncthing.net/"
       distro: "syncthing"
-      section: "stable"
-    - name: "syncthing-v2"
-      state: "present"
-      install_on: "production fermium"
-      key: "https://syncthing.net/release-key.gpg"
-      url: "https://apt.syncthing.net/"
-      distro: "syncthing"
-      section: "stable-v2"
+      section: "stable stable-v2"
     - name: "helm"
       state: "present"
       install_on: "production fermium"
