Updated gotify keepalive settings for better battery consumption

--- a/stages/services/includes/monitoring/files/etc/systemd/system/gotify.service
+++ b/stages/services/includes/monitoring/files/etc/systemd/system/gotify.service
@@ -8,6 +8,8 @@ ExecStart=/usr/bin/podman run \
             --name gotify \
             -v /var/lib/gotify:/app/data \
             -e TZ="Europe/Berlin" \
+            -e GOTIFY_SERVER_KEEPALIVEPERIODSECONDS="550" \
+            -e GOTIFY_SERVER_STREAM_PINGPERIODSECONDS="550" \
             -p 127.0.0.1:27107:80 \
             ghcr.io/gotify/server
 ExecStop=/usr/bin/podman stop -t 2 gotify
