Added timeout to a selected variable to check if it actually works

--- a/stages/monitoring/variables/checks.yaml
+++ b/stages/monitoring/variables/checks.yaml
@@ -5,6 +5,7 @@ production:
     argument: syncthing@syncthing.service
     interval: 1m
     description: 'Syncthing: production (systemd service)'
+    timeoutSec: 120
     notify:
       - telegram
       - gotify
