--- a/stages/monitoring/variables/checks.yaml
+++ b/stages/monitoring/variables/checks.yaml
@@ -584,6 +584,7 @@ fermium:
     plugin: relay
     argument: http://printer.tiredsysadmin.cc:8881?check=home_printer
     interval: 10m
+    timeoutSec: 240
     description: '[relay] CUPS server online test'
     notify:
       - dummy
@@ -592,6 +593,7 @@ fermium:
     plugin: relay
     argument: http://printer.tiredsysadmin.cc:8881?check=home_printer_device
     interval: 5m
+    timeoutSec: 240
     description: '[relay] Checking printer status, Brother Industries, Ltd HL-2140 series'
     notify:
       - dummy
@@ -603,6 +605,7 @@ fermium:
     flowOperator: downwards
     argument: http://10.8.0.6:8881
     interval: 181s
+    timeoutSec: 120
     description: TINC Mesh VPN Network
     hostname: 192.168.2.221
     notify:
